--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +9,29 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <!-- Header -->
     <header>
         <div id="logo">
             <a href="./index.html">
-            <img src="./img/logo-white.png" alt="">
+                <img src="./img/logo-white.png" alt="Logo">
             </a>
         </div>
-        <ul class="nav" id="nav">
-            <ul class="navLogo">
-                <a href="./index.html">
-                     <img src="./img/logo-white.png" alt="">
-               </a>
+        <nav>
+            <ul class="nav" id="nav">
+                <li class="nav-link"><a href="./index.html">Home</a></li>
+                <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
+                <li class="nav-link"><a href="./contact.html">Contact</a></li>
+                <li class="sociallinkContainer">
+                    <img class="sociallink" src="./img/fabook-icon-white.svg" alt="Facebook">
+                    <img class="sociallink" src="./img/twitter-icon-white.svg" alt="Twitter">
+                    <img class="sociallink" src="./img/inkedin-icon-white.svg" alt="LinkedIn">
+                    <img class="sociallink" src="./img/whatsapp-icon-white.svg" alt="WhatsApp">
+                </li>
             </ul>
-
-            <li class="nav-link"><a href="./index.html">Home</a></li>
-            <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
-            <li class="nav-link"><a href="./contact.html">Contact</a></li>
-            <li class="sociallinkContainer">
-                <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
-                <img class="sociallink" src="./img/twitter-icon-white.svg" alt="">
-                <img class="sociallink" src="./img/inkedin-icon-white.svg" alt="">
-                <img class="sociallink" src="./img/whatsapp-icon-white.svg" alt="">
-            </li>
-        </ul>
+        </nav>
         <div id="barContainer">
             <i id="bar" class="fa-solid fa-bars"></i>
         </div>
