--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
 
     <!-- Header -->
@@ -19,6 +17,13 @@
                 <img src="./img/logo-white.png" alt="Logo">
             </a>
         </div>
+
+        <!-- Mobile Menu Toggle -->
+        <div id="barContainer">
+            <i id="bar" class="fa-solid fa-bars"></i>
+        </div>
+
+        <!-- Navigation Menu -->
         <nav>
             <ul class="nav" id="nav">
                 <li class="nav-link"><a href="./index.html">Home</a></li>
@@ -32,9 +37,6 @@
                 </li>
             </ul>
         </nav>
-        <div id="barContainer">
-            <i id="bar" class="fa-solid fa-bars"></i>
-        </div>
     </header>
 
     <!-- Hero page -->
