--- a/index.html
+++ b/index.html
@@ -14,31 +14,42 @@
     <header>
         <div id="logo">
             <a href="./index.html">
-            <img src="./img/logo-white.png" alt="">
+                <img src="./img/logo-white.png" alt="Logo">
             </a>
         </div>
         <ul class="nav" id="nav">
-            <ul class="navLogo">
+            <li class="navLogo">
                 <a href="./index.html">
-                     <img src="./img/logo-white.png" alt="">
-               </a>
-            </ul>
+                    <img src="./img/logo-white.png" alt="Logo">
+                </a>
+            </li>
 
             <li class="nav-link"><a href="./index.html">Home</a></li>
             <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
             <li class="nav-link"><a href="./contact.html">Contact</a></li>
             <li class="sociallinkContainer">
-                <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
-                <img class="sociallink" src="./img/twitter-icon-white.svg" alt="">
-                <img class="sociallink" src="./img/inkedin-icon-white.svg" alt="">
-                <img class="sociallink" src="./img/whatsapp-icon-white.svg" alt="">
+                <img class="sociallink" src="./img/fabook-icon-white.svg" alt="Facebook">
+                <img class="sociallink" src="./img/twitter-icon-white.svg" alt="Twitter">
+                <img class="sociallink" src="./img/inkedin-icon-white.svg" alt="LinkedIn">
+                <img class="sociallink" src="./img/whatsapp-icon-white.svg" alt="WhatsApp">
             </li>
         </ul>
+
+        <!-- Mobile Menu -->
+        <div id="mobileMenu" class="mobile-nav">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./aboutus.html">About Us</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </div>
+
+        <!-- Mobile Menu Toggle Button -->
         <div id="barContainer">
             <i id="bar" class="fa-solid fa-bars"></i>
         </div>
     </header>
-
+    
     <!-- Hero page -->
     <section class="hero gridSection">
         <div class="sectionDesc">
