--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
             </li>
         </ul>
 
-        <!-- Mobile Menu -->
-        <div id="mobileMenu" class="mobile-nav">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./aboutus.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </div>
+       <!-- Mobile Menu -->
+<div id="mobileMenu" class="mobile-nav">
+    <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./aboutus.html">About Us</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+    </ul>
+</div>
 
-        <!-- Mobile Menu Toggle Button -->
-        <div id="barContainer">
-            <i id="bar" class="fa-solid fa-bars"></i>
-        </div>
+<!-- Mobile Menu Toggle Button -->
+<div id="barContainer">
+    <!-- Use the provided image as the mobile button -->
+    <img id="bar" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Font_Awesome_5_solid_bars.svg" alt="Menu" />
+</div>
     </header>
     
     <!-- Hero page -->
