--- a/index.html
+++ b/index.html
@@ -178,16 +178,15 @@
     <section class="hero gridSection">
         <div class="sectionDesc">
             <h1 class="headline">
-                Most popular way to trade <span class="cryptoText">CRYPTO</span>.
+                Best way to start Earning High with<span class="cryptoText">CRYPTO INVESTMENT</span>.
             </h1>
             <p class="sub-headline">
-                You can see a record of all your transactions 
-                anytime you want and never have to worry about 
-                someone erasing or stealing your money!
-            </p>
+                 Secure Your Financial Future with Our High-Yield A.I
+                 Investment Firm. Earn Massive Profits with Our A
+                 Powered Trading/Investments
             <div class="btnContainer">
                 <button class="btn btn1">Contact Now</button>
-                <button class="btn btn2">play video <i class="fa-solid fa-play"></i></button>
+                <button class="btn btn2">Loginplay video <i class="fa-solid fa-play"></i></button>
             </div>
         </div>
         <div class="sectionPic bouncepic" id="sectionPic">
@@ -201,12 +200,22 @@
             <div class="eachCarousel eachCarouselBorder">
                 <img src="./img/bitcoin-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Bitcoin</h1>
-                    <p class="carouselPara">Bitcoin is an innovative payment network</p>
+                    <h1 class="carouselTitle">Starter Plan</h1>
+                    <p class="carouselPara">$26/R467</p>
                     <div class="carouselPrice">
-                        <h3>$34,000</h3>
+                        <h3>2hrs Profit</h3>
                         <span class="rect"></span>
-                        <h3 class="carouselDiscount">15%</h3>
+                        <h3 class="carouselDiscount">$57.20</h3>
+                    </div>
+                    <div class="carouselPrice">
+                        <h3>6hrs Profit</h3>
+                        <span class="rect"></span>
+                        <h3 class="carouselDiscount">$67.60</h3>
+                    </div>
+                    <div class="carouselPrice">
+                        <h3>12hrs Profit</h3>
+                        <span class="rect"></span>
+                        <h3 class="carouselDiscount">$77.74</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
