--- a/index.html
+++ b/index.html
@@ -216,10 +216,7 @@
                 <article class="carouselDesc">
                     <h1 class="carouselTitle">Ethereum</h1>
                     <p class="carouselPara">$26/R467</p>
-                    <div class="carouselPrice">
-                        <h3>2Hrs Profit $57.20</h3>
-                        <span class="rect"></span>
-                    </div>
+                    <h3 class="carouselDiscount">6Hrs Profit $67.60</h3>
                     <h3 class="carouselDiscount">6Hrs Profit $67.60</h3>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
