--- a/index.html
+++ b/index.html
@@ -213,10 +213,11 @@
             <div class="eachCarousel">
                 <img src="./img/ethereum-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Ethereum</h1>
-                    <p class="carouselPara">$26/R467</p>
-                    <h3 class="carouselDiscount">6Hrs Profit $67.60</h3>
-                    <h3 class="carouselDiscount">6Hrs Profit $67.60</h3>
+                    <h1 class="carouselTitle">Tether</h1>
+                    <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
+                    <div class="carouselPrice">
+                        <h3>$7,000hhhhhhhhhhhhhh</h3>
+                    </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
             </div>
@@ -227,8 +228,7 @@
                     <h1 class="carouselTitle">Tether</h1>
                     <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
                     <div class="carouselPrice">
-                        <h3>$7,000</h3>
-                        <h3 class="carouselDiscount">4%</h3>
+                        <h3>$7,000hhhhhhhhhhhhhh</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
