--- a/index.html
+++ b/index.html
@@ -201,10 +201,9 @@
                 <img src="./img/bitcoin-icon.png" alt="">
                 <article class="carouselDesc">
                     <h1 class="carouselTitle">Starter Plan</h1>
+                    <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>$34,000</h3>
-                        <h3 class="carouselDiscount">15%</h3>
-                    <p class="carouselPara">Bitcoin is an innovative payment network</p>
+                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -214,9 +213,10 @@
                 <img src="./img/ethereum-icon.png" alt="">
                 <article class="carouselDesc">
                     <h1 class="carouselTitle">Tether</h1>
-                    <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
+                    <p class="carouselPara">Plan Price: $​76/R1,363</p>
                     <div class="carouselPrice">
-                        <h3>$7,000hhhhhhhhhhhhhh</h3>
+                        <h3>2Hr Profit: $​167.20 / 6Hr Profit: $​197.60</h3>
+                    </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -226,9 +226,10 @@
                 <img src="./img/tether-icon.png" alt="">
                 <article class="carouselDesc">
                     <h1 class="carouselTitle">Tether</h1>
-                    <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
+                   <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>$7,000hhhhhhhhhhhhhh</h3>
+                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                    </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -237,12 +238,11 @@
             <div class="eachCarousel">
                 <img src="./img/bitcoin-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Bitcoin</h1>
-                    <p class="carouselPara">Bitcoin is an innovative payment network</p>
+                    <h1 class="carouselTitle">Tether</h1>
+                    <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>$34,000</h3>
-                        <span class="rect"></span>
-                        <h3 class="carouselDiscount">15%</h3>
+                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                    </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -251,12 +251,11 @@
             <div class="eachCarousel">
                 <img src="./img/ethereum-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Ethereum</h1>
-                    <p class="carouselPara">Ethereum is open-source blockchain currency</p>
+                    <h1 class="carouselTitle">Tether</h1>
+                    <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>$25,600</h3>
-                        <span class="rect"></span>
-                        <h3 class="carouselDiscount">9%</h3>
+                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                    </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -264,13 +263,12 @@
     
             <div class="eachCarousel">
                 <img src="./img/tether-icon.png" alt="">
-                <article class="carouselDesc">
+               <article class="carouselDesc">
                     <h1 class="carouselTitle">Tether</h1>
-                    <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
+                    <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>$7,000</h3>
-                        <span class="rect"></span>
-                        <h3 class="carouselDiscount">4%</h3>
+                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                    </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
