--- a/index.html
+++ b/index.html
@@ -212,10 +212,11 @@
             <div class="eachCarousel">
                 <img src="./img/ethereum-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Tether</h1>
+                    <h1 class="carouselTitle">Advance Plan</h1>
                     <p class="carouselPara">Plan Price: $​76/R1,363</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $​167.20 / 6Hr Profit: $​197.60</h3>
+                        <h3>2Hr Profit: $​167.20</h3>
+                        <h3>6Hr Profit: $​197.60</h3>
                     </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
@@ -225,10 +226,10 @@
             <div class="eachCarousel">
                 <img src="./img/tether-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Tether</h1>
-                   <p class="carouselPara">Plan Price: $26/R467</p>
+                    <h1 class="carouselTitle">Pro Plan</h1>
+                   <p class="carouselPara">Plan Price: $185/​R3,363</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                        <h3>2Hr Profit: $407.00 / 6Hr Profit: $481.00</h3>
                     </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
@@ -238,10 +239,10 @@
             <div class="eachCarousel">
                 <img src="./img/bitcoin-icon.png" alt="">
                 <article class="carouselDesc">
-                    <h1 class="carouselTitle">Tether</h1>
-                    <p class="carouselPara">Plan Price: $26/R467</p>
+                    <h1 class="carouselTitle">Expert Plan</h1>
+                    <p class="carouselPara">Plan Price: 240/4,340</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                        <h3>2Hr Profit: $​528.00 / 6Hr Profit: $​624.00</h3>
                     </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
