--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                     <h1 class="carouselTitle">Starter Plan</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $57.20 / 6Hr Profit: $67.60</h3>
+                        <h3>2Hr Profit: $57.20 
+                        6Hr Profit: $67.60</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
