--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                     <h1 class="carouselTitle">Starter Plan</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $57 / 6Hr Profit: $67</h3>
+                        <h3>2Hr Profit: $57/
+                         6Hr Profit: $67</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -215,8 +216,8 @@
                     <h1 class="carouselTitle">Advance Plan</h1>
                     <p class="carouselPara">Plan Price: $​76/R1,363</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $​167</h3>
-                        <h4>6Hr Profit: $​197</h4>
+                        <h3>2Hr Profit:$​167/
+                         6Hr Profit:$​197</h3>
                     </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
@@ -229,7 +230,8 @@
                     <h1 class="carouselTitle">Pro Plan</h1>
                    <p class="carouselPara">Plan Price: $185/​R3363</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $407/6Hr Profit: $481</h3>
+                        <h3>2Hr Profit:$407/
+                         6Hr Profit:$481</h3>
                     </div>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
