--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@
                         <h3>2Hr Profit:$​167/
                          6Hr Profit:$​197</h3>
                     </div>
-                    </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
             </div>
@@ -233,7 +232,6 @@
                         <h3>2Hr Profit:$407/
                          6Hr Profit:$481</h3>
                     </div>
-                    </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
             </div>
@@ -244,8 +242,8 @@
                     <h1 class="carouselTitle">Expert Plan</h1>
                     <p class="carouselPara">Plan Price: 240/4340</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$​528/6Hr Profit:$​624</h3>
-                    </div>
+                        <h3>2Hr Profit:$​528/
+                         6Hr Profit:$​624</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -257,8 +255,8 @@
                     <h1 class="carouselTitle">Tether</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$57/6Hr Profit:$67</h3>
-                    </div>
+                        <h3>2Hr Profit:$57/
+                         6Hr Profit:$67</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -270,8 +268,8 @@
                     <h1 class="carouselTitle">Tether</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$57/6Hr Profit:$67</h3>
-                    </div>
+                        <h3>2Hr Profit:$57/
+                         6Hr Profit:$67</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
