--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                     <h1 class="carouselTitle">Starter Plan</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit: $57/
-                         6Hr Profit: $67</h3>
+                        <h3>2Hours Profit: $57/
+                         6Hours Profit: $67</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -216,8 +216,8 @@
                     <h1 class="carouselTitle">Advance Plan</h1>
                     <p class="carouselPara">Plan Price: $​76/R1,363</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$​167/
-                         6Hr Profit:$​197</h3>
+                        <h3>2Hours Profit:$​167/
+                         6Hours Profit:$​197</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -229,8 +229,8 @@
                     <h1 class="carouselTitle">Pro Plan</h1>
                    <p class="carouselPara">Plan Price: $185/​R3363</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$407/
-                         6Hr Profit:$481</h3>
+                        <h3>2Hours Profit:$407/
+                         6Hours Profit:$481</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -242,8 +242,8 @@
                     <h1 class="carouselTitle">Expert Plan</h1>
                     <p class="carouselPara">Plan Price: 240/4340</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$​528/
-                         6Hr Profit:$​624</h3>
+                        <h3>2Hours Profit:$​528/
+                         6Hours Profit:$​624</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -255,8 +255,8 @@
                     <h1 class="carouselTitle">Tether</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$57/
-                         6Hr Profit:$67</h3>
+                        <h3>2Hours Profit:$57/
+                         6Hours Profit:$67</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
@@ -268,8 +268,8 @@
                     <h1 class="carouselTitle">Tether</h1>
                     <p class="carouselPara">Plan Price: $26/R467</p>
                     <div class="carouselPrice">
-                        <h3>2Hr Profit:$57/
-                         6Hr Profit:$67</h3>
+                        <h3>2Hours Profit:$57/
+                         6Hours Profit:$67</h3>
                     </div>
                     <button class="btn carouselBtn">Buy & Trade</button>
                 </article>
