--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="carouselPrice">
                         <h3>Profit:$57 Upto $900007</h3>
                     </div>
-                    <button class="btn carouselBtn">Buy Custom Plan</button>
+                    <button class="btn carouselBtn">Custom Plan</button>
                 </article>
             </div>
         </div>
